--- a/generated_main.ipynb
+++ b/generated_main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ParsedChatCompletionMessage[NoneType](content='In 2019, the company generated a revenue of $10 million. While this figure is respectable, management indicates potential for increased earnings, contingent on expanding the client base. Looking ahead, a key strategic focus for 2020 should be on acquiring more clients to boost revenues beyond 2019 levels.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[], parsed=None)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'The revenue for 2019 was $10 million. While this figure may reflect a stable financial performance, there is an acknowledgment that revenue could have been higher. The limitation was the number of clients, suggesting that client acquisition was a critical area for improvement. The strategy moving forward into 2020 should prioritize expanding the client base to increase revenue potential.'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(__dir(k)__)"
+    "k"
    ]
   },
   {
