--- a/generated_main.ipynb
+++ b/generated_main.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from main import generate_content_based_on_prompt"
+    "from main import generate_content_based_on_prompt, write_to_file, _load_file"
    ]
   },
   {
@@ -15,12 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_description = \"Revenue 2019\"\n",
-    "table = \"Revenue 2019: 10\"\n",
-    "call_transcript = \"The revenue for 2019 is 10 million dollars. However, it could have been more if we had more clients. We need to focus on getting more clients in 2020.\"\n",
-    "subtitle = \"Rev 2019\"\n",
-    "textbox_user_prompt = \"Give an analysis on the revenue for 2019.\"\n",
-    "length = \"Short\"\n"
+    "table = _load_file(\"./test_table.txt\")"
    ]
   },
   {
@@ -29,35 +24,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = await generate_content_based_on_prompt(project_description, table, call_transcript, subtitle, textbox_user_prompt, length)"
+    "call_transcript = _load_file(\"./management_call.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "project_description = \" Project type: financial due diligence \\\n",
+    "Company Name: Europe Air Conditioning Ltd (EAC) \\\n",
+    "Financial Year End: (assumed 31 December, unless otherwise stated) \\\n",
+    "Currency: GBP \\\n",
+    "Context:Findings aimed at providing transparency and accuracy in financial reporting \\\n",
+    "Intended to inform strategic decisions by active shareholders and potential investors\"\n",
+    "\n",
+    "topic = \"Cost of Sales\"\n",
+    "textbox_user_prompt = \" \\\n",
+    "accounting treatment (what's included) \\\n",
+    "subcontractors\"\n",
+    "length = \"short\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The revenue for 2019 was $10 million. While this figure may reflect a stable financial performance, there is an acknowledgment that revenue could have been higher. The limitation was the number of clients, suggesting that client acquisition was a critical area for improvement. The strategy moving forward into 2020 should prioritize expanding the client base to increase revenue potential.'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k"
+    "k = await generate_content_based_on_prompt(project_description, table, call_transcript, topic, textbox_user_prompt, length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Europe Air Conditioning Ltd (EAC) includes several direct expenses within their cost of sales. From the provided data table, cost components encompass Direct Expenses, CIS Labour, CIS Materials, Plant Hire, and Subcontractors. Management has emphasized a minimal reliance on subcontractors, typically handling projects with their in-house team and only occasionally using freelance engineers during peak demand periods. This approach aligns with their strategy to maintain cost control and efficiency. The subcontractor and CIS Labour combined account for a diminishing percentage of the total cost of sales, reducing from 13% in FY22 and FY23 to 6% in FY24, likely reflecting better resource management and less outsourcing over time.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(k)"
+   ]
   }
  ],
  "metadata": {
