add struct outputs

--- a/generated_main.ipynb
+++ b/generated_main.ipynb
@@ -6,6 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "def write_convo_to_file(output_file: str, data: list[dict]):\n",
+    "  with open(output_file, 'w', encoding='utf-8') as file:\n",
+    "    json.dump(data, file, indent=4)\n",
+    "\n",
+    "updated_prompt_chain = [{\"role\": \"user\", \"content\": \"test\"}, {\"role\": \"assistant\", \"content\": \"more more test\"}]\n",
+    "write_convo_to_file(\"test.json\", updated_prompt_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from main import generate_content_based_on_prompt, write_to_file, _load_file"
    ]
   },
