--- a/generated_main.ipynb
+++ b/generated_main.ipynb
@@ -6,22 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "def write_convo_to_file(output_file: str, data: list[dict]):\n",
-    "  with open(output_file, 'w', encoding='utf-8') as file:\n",
-    "    json.dump(data, file, indent=4)\n",
-    "\n",
-    "updated_prompt_chain = [{\"role\": \"user\", \"content\": \"test\"}, {\"role\": \"assistant\", \"content\": \"more more test\"}]\n",
-    "write_convo_to_file(\"test.json\", updated_prompt_chain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from main import generate_content_based_on_prompt, write_to_file, _load_file"
+    "import sys\n",
+    "from Utils.file_utils import load_convo_from_file, write_to_file, write_convo_to_file, load_file\n",
+    "from PromptEngine.PromptEngine import engine"
    ]
   },
   {
@@ -30,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = _load_file(\"./test_table.txt\")"
+    "customer_prompt_chain: list[dict] = []\n",
+    "customer_prompt = \"Customer Prompt: The customer is asking: Generate an initial analysis based on the following information, and requirements:\""
    ]
   },
   {
@@ -39,12 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "call_transcript = _load_file(\"./management_call.txt\")"
+    "table = load_file(\"./test_data/test_table.txt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "call_transcript = load_file(\"./test_data/management_call.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,28 +61,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = await generate_content_based_on_prompt(project_description, table, call_transcript, topic, textbox_user_prompt, length)"
+    "generated_data, updated_prompt_chain = await engine.generate_content(\n",
+    "  customer_prompt_chain, customer_prompt, project_description, table, call_transcript, topic, textbox_user_prompt, length\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Europe Air Conditioning Ltd (EAC) includes several direct expenses within their cost of sales. From the provided data table, cost components encompass Direct Expenses, CIS Labour, CIS Materials, Plant Hire, and Subcontractors. Management has emphasized a minimal reliance on subcontractors, typically handling projects with their in-house team and only occasionally using freelance engineers during peak demand periods. This approach aligns with their strategy to maintain cost control and efficiency. The subcontractor and CIS Labour combined account for a diminishing percentage of the total cost of sales, reducing from 13% in FY22 and FY23 to 6% in FY24, likely reflecting better resource management and less outsourcing over time.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Answer(explanation=\"The cost of sales for Europe Air Conditioning Ltd (EAC) primarily includes direct expenses, CIS (Construction Industry Scheme) Labour, CIS Materials, Plant Hire, and costs related to Subcontractors. It appears that EAC keeps the use of subcontractors to a minimum, as emphasized by comments in the management call transcript indicating a preference to manage peak workloads internally. This approach is likely intended to better control quality and costs. Direct costs such as wages and materials constitute the primary components of the cost of sales, aligning with industry practices where labor and materials represent significant variable costs in projects. Subcontractor expenses form a smaller proportion (6% in FY24) of the total cost of sales, highlighting the company's reliance on its workforce rather than external labor. The company's emphasis on fixed pricing also serves to reduce variability in project costs and enhance predictability in profitability.\", analysis='None')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(k)"
+    "print(generated_data.explanation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(generated_data.analysis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#output_analysis_file = sys.argv[9]\n",
+    "#output_other_data_file = sys.argv[10]\n",
+    "#output_convo_file = sys.argv[11]\n",
+    "#write_to_file(output_analysis_file, generated_data.analysis)\n",
+    "#write_to_file(output_other_data_file, generated_data.explanation)\n",
+    "#write_convo_to_file(output_convo_file, updated_prompt_chain)"
    ]
   }
  ],
