--- a/generated_main.ipynb
+++ b/generated_main.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer_prompt_chain: list[dict] = []\n",
-    "customer_prompt = \"Customer Prompt: The customer is asking: Generate an initial analysis based on the following information, and requirements:\""
+    "customer_prompt_chain: list[dict] = []"
    ]
   },
   {
@@ -27,24 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = load_file(\"./test_data/test_table.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "call_transcript = load_file(\"./test_data/management_call.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "customer_prompt = \"Customer Prompt: The customer is asking: Generate an initial analysis based on the following information, and requirements:\"\n",
+    "customer_prompt = \"What is included when computing the cost of sales?\"\n",
+    "table = load_file(\"./test_data/test_table.txt\")\n",
+    "call_transcript = load_file(\"./test_data/management_call.txt\")\n",
     "project_description = \" Project type: financial due diligence \\\n",
     "Company Name: Europe Air Conditioning Ltd (EAC) \\\n",
     "Financial Year End: (assumed 31 December, unless otherwise stated) \\\n",
@@ -61,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Answer(explanation=\"The cost of sales for Europe Air Conditioning Ltd (EAC) primarily includes direct expenses, CIS (Construction Industry Scheme) Labour, CIS Materials, Plant Hire, and costs related to Subcontractors. It appears that EAC keeps the use of subcontractors to a minimum, as emphasized by comments in the management call transcript indicating a preference to manage peak workloads internally. This approach is likely intended to better control quality and costs. Direct costs such as wages and materials constitute the primary components of the cost of sales, aligning with industry practices where labor and materials represent significant variable costs in projects. Subcontractor expenses form a smaller proportion (6% in FY24) of the total cost of sales, highlighting the company's reliance on its workforce rather than external labor. The company's emphasis on fixed pricing also serves to reduce variability in project costs and enhance predictability in profitability.\", analysis='None')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<relevant_insight>The cost of sales for Europe Air Conditioning Ltd (EAC) primarily includes direct expenses such as wages and materials. The company also accounts for Construction Industry Scheme (CIS) labour, CIS materials, plant hire, and subcontractor costs. EAC minimizes its reliance on subcontractors, with subcontractor expenses forming a small portion of the cost of sales, reflecting less than 6% over Fiscal Year 2024.</relevant_insight>\n"
+     ]
     }
    ],
    "source": [
@@ -92,16 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Europe Air Conditioning Ltd's cost of sales includes direct expenses related to wages and materials, CIS labour and materials, plant hire, and subcontractor costs, with minimal reliance on subcontractors.\n"
+     ]
+    }
+   ],
    "source": [
     "print(generated_data.analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
